--- a/HELP_Analysis.Rmd
+++ b/HELP_Analysis.Rmd
@@ -99,32 +99,44 @@ median_pivot <- mutate(median_pivot, `HELP repayment income` = case_when(
     ))
 
 median_pivoted <- median_pivot %>%
-  group_by(`Financial year`, State) %>%
+  group_by(`Financial year`) %>%
   summarise(
-    median_age = sort(rep(`HELP repayment income`,Count))[length(rep(`HELP repayment income`,Count))/2]
+    median_income = sort(rep(`HELP repayment income`,Count))[length(rep(`HELP repayment income`,Count))/2]
   )
 
-median_pivoted <- mutate(median_pivoted, median_age = case_when(
-    median_age== 9999 ~ "Up to $9,999",
-    median_age==19999 ~ "$10,000 to $19,999", 
-    median_age==29999 ~ "$20,000 to $29,999", 
-    median_age==39999 ~ "$30,000 to $39,999", 
-    median_age==49999 ~ "$40,000 to $49,999", 
-    median_age==59999 ~ "$50,000 to $59,999", 
-    median_age==69999 ~ "$60,000 to $69,999", 
-    median_age==79999 ~ "$70,000 to $79,999", 
-    median_age==89999 ~ "$80,000 to $89,999", 
-    median_age==99999 ~ "$90,000 to $99,999", 
-    median_age==109999 ~ "$100,000 to $109,999", 
-    median_age==119999 ~ "$110,000 to $119,999", 
-    median_age==129999 ~ "$120,000 to $129,999", 
-    median_age==130000 ~ "$130,000 or more"
+median_pivoted <- mutate(median_pivoted, median_income = case_when(
+    median_income== 9999 ~ "Up to $9,999",
+    median_income==19999 ~ "$10,000 to $19,999", 
+    median_income==29999 ~ "$20,000 to $29,999", 
+    median_income==39999 ~ "$30,000 to $39,999", 
+    median_income==49999 ~ "$40,000 to $49,999", 
+    median_income==59999 ~ "$50,000 to $59,999", 
+    median_income==69999 ~ "$60,000 to $69,999", 
+    median_income==79999 ~ "$70,000 to $79,999", 
+    median_income==89999 ~ "$80,000 to $89,999", 
+    median_income==99999 ~ "$90,000 to $99,999", 
+    median_income==109999 ~ "$100,000 to $109,999", 
+    median_income==119999 ~ "$110,000 to $119,999", 
+    median_income==129999 ~ "$120,000 to $129,999", 
+    median_income==130000 ~ "$130,000 or more"
     ))
 
-pivot_wide <- median_pivoted %>%
-  pivot_wider(names_from = State, values_from = median_age)
+median_plot <- ggplot(data = median_pivoted, aes(x = `Financial year`, y = median_income, group = 1)) +
+  geom_line() +
+  geom_point() +
+  labs(title = "Median taxable income of HELP debtors in Australia from 2009 to 2021 financial year", 
+       subtitle = "There has been a positive increase in median taxable income over time", 
+       caption = "Data source: Data.gov.au") +
+  ylab("Income Group") +
+  xlab("Year") +
+  theme(panel.grid.major = element_line(color = "grey",
+                                        size = 0.5,
+                                        linetype = 3),
+        axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
 
+median_plot
 ```
+
 ### Chenxi's Part
 
 ## Conclusion
