--- a/HELP_Analysis.Rmd
+++ b/HELP_Analysis.Rmd
@@ -8,8 +8,8 @@ output:
     toc: true
     toc_float: true
     theme: paper
-    fig_width: 7
-    fig_height: 4
+    fig_width: 9
+    fig_height: 5
 ---
 
 ```{r setup, include=FALSE}
@@ -38,7 +38,7 @@ table_7 <- read_xlsx("Data/help-statistics-2021-2022.xlsx", sheet = 8, skip = 2,
 
 ### Alana's Part
 
-### Anh-Thu's Part
+### Taxable Income Group
 
 3. What was the distribution of taxable (HELP repayment) income of HELP debtors in Australian States and Territories in the 2021-22 financial year?
 
@@ -59,10 +59,14 @@ income_factor = c("Up to $9,999", "$10,000 to $19,999", "$20,000 to $29,999", "$
 
 dist_plot <- ggplot(data = pivoted_dist, aes(x = factor(`HELP repayment income`, level = income_factor), y = Count, fill = State)) +
   geom_bar(stat="identity") +
-  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
-  scale_y_continuous(name="Count of Income", labels = label_comma()) +
+  theme(panel.grid.major = element_line(color = "grey",
+                                        size = 0.5,
+                                        linetype = 3),
+        axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
+  scale_y_continuous(name="Count of Debtors", labels = label_comma(), 
+                     breaks = seq(0, 350000, by = 50000)) +
   xlab("Income Group") +
-  labs(title = "Distribution of HELP debtor income in Australian States and Territories", subtitle = "There is a postive skew in the distribution of HELP debtor income", caption = "Data source: Data.gov.au")
+  labs(title = "Figure 3: Distribution of HELP debtor income in Australian States and Territories", subtitle = "There is a postive skew in the distribution of HELP debtor income", caption = "Data source: Data.gov.au")
 
 dist_plot
 
@@ -154,7 +158,7 @@ median_plot <- ggplot(median_pivoted2, aes(x=`Financial year`)) +
   geom_point(aes(y = `Mean Income`, group = 1, color = "Mean")) +
   scale_color_manual(values = c(Median = "steelblue", Mean = "darkred"), 
                      labels = c(Median = "Median income", Mean = "Mean income")) +
-  labs(title = "Median taxable income group of HELP debtors in Australia from 2009 to 2021 financial year", 
+  labs(title = "Figure 4: Median and Mean taxable income group of HELP debtors in Australia from 2009 to 2021", 
        subtitle = "There has been a positive increase in median taxable income over time", 
        caption = "Data source: Data.gov.au") +
   ylab("Income Group") +
@@ -170,6 +174,7 @@ median_plot
 kable(median_pivoted2, col.names = c("Financial Year", "Count of Outstanding Debtors", "Median Income", "Mean Income"), caption = "Table 4: Table of the median and mean taxable income group of outstanding HELP debtors in Australia from 2009-10 to 2021-22")
 
 ```
+
 
 ### Chenxi's Part
 
