--- a/HELP_Analysis.Rmd
+++ b/HELP_Analysis.Rmd
@@ -68,9 +68,9 @@ dist_plot <- ggplot(data = pivoted_dist, aes(x = factor(`HELP repayment income`,
   xlab("Income Group") +
   labs(title = "Figure 3: Distribution of HELP debtor income in Australian States and Territories", subtitle = "There is a postive skew in the distribution of HELP debtor income", caption = "Data source: Data.gov.au")
 
-dist_plot
-
 kable(income_dist, col.names = c("Financial Year","HELP Repayment Income", "ACT", "NSW", "NT", "QLD", "SA", "TAS", "VIC", "WA"), caption = "Table 3: Table of count of outstanding HELP debtors in each income group by State or Territory in 2021-22")
+
+dist_plot
 
 ```
 
@@ -158,7 +158,7 @@ median_plot <- ggplot(median_pivoted2, aes(x=`Financial year`)) +
   geom_point(aes(y = `Mean Income`, group = 1, color = "Mean")) +
   scale_color_manual(values = c(Median = "steelblue", Mean = "darkred"), 
                      labels = c(Median = "Median income", Mean = "Mean income")) +
-  labs(title = "Figure 4: Median and Mean taxable income group of HELP debtors in Australia from 2009 to 2021", 
+  labs(title = "Figure 4: Median and mean income of HELP debtors in Australia from 2009 to 2021", 
        subtitle = "There has been a positive increase in median taxable income over time", 
        caption = "Data source: Data.gov.au") +
   ylab("Income Group") +
@@ -169,11 +169,17 @@ median_plot <- ggplot(median_pivoted2, aes(x=`Financial year`)) +
                                         linetype = 3),
         axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
 
-median_plot
-
 kable(median_pivoted2, col.names = c("Financial Year", "Count of Outstanding Debtors", "Median Income", "Mean Income"), caption = "Table 4: Table of the median and mean taxable income group of outstanding HELP debtors in Australia from 2009-10 to 2021-22")
 
+median_plot
 ```
+Table 3 presents the counts of students with outstanding HELP debt in each taxable income group, incremented by $10,000, in all States and Territories in the 2021 fiscal year. The distribution of which is illustrated as a bar chart in Figure 3. Across all income groups, NSW, QLD and VIC have the highest number of outstanding HELP debtors, and the most debtors earned within the $20,000 to $29,999 income group in 2021. 
+
+Table 4 presents the calculations of median and mean earned income groups in Australia from 2009 to 2021. The trends of which are illustrated as a line chart in Figure 4. Both the median and mean income follow the same increasing trend while the median sits below the mean by 1 income group. Both have increased by 1 income group ($10,000) since 2009. The median income group in 2021 was $40,000 to $49,999, while the mean was $50,000 to $59,999.
+
+It can be concluded that most debtors end up earning below the mean income and the number of debtors earning above the mean diminishes as the income group increases. However, a larger number of debtors in the “$130,000 or more” income group is observed as it is an exception to the $10,000 increment rule.
+
+The limitation of this analysis is that the data fails to account for the size of the HELP debt incurred and how far along each debtor is in their career. Greater debt may indicate higher education or further progressed careers may indicate more employability which may impact the income earned. 
 
 
 ### Chenxi's Part
